Remove Jabel and other Java-8 specific workarounds
Issue: #463